; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/qlogic/qed/extr_qed_sriov.c_qed_iov_setup.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/qlogic/qed/extr_qed_sriov.c_qed_iov_setup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.qed_hwfn = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @qed_iov_setup(%struct.qed_hwfn* %0) #0 {
  %2 = alloca %struct.qed_hwfn*, align 8
  store %struct.qed_hwfn* %0, %struct.qed_hwfn** %2, align 8
  %3 = load %struct.qed_hwfn*, %struct.qed_hwfn** %2, align 8
  %4 = call i32 @IS_PF_SRIOV(%struct.qed_hwfn* %3)
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %6, label %10

6:                                                ; preds = %1
  %7 = load %struct.qed_hwfn*, %struct.qed_hwfn** %2, align 8
  %8 = call i32 @IS_PF_SRIOV_ALLOC(%struct.qed_hwfn* %7)
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %11, label %10

10:                                               ; preds = %6, %1
  br label %14

11:                                               ; preds = %6
  %12 = load %struct.qed_hwfn*, %struct.qed_hwfn** %2, align 8
  %13 = call i32 @qed_iov_setup_vfdb(%struct.qed_hwfn* %12)
  br label %14

14:                                               ; preds = %11, %10
  ret void
}

declare dso_local i32 @IS_PF_SRIOV(%struct.qed_hwfn*) #1

declare dso_local i32 @IS_PF_SRIOV_ALLOC(%struct.qed_hwfn*) #1

declare dso_local i32 @qed_iov_setup_vfdb(%struct.qed_hwfn*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
